Fixed stack alignment problem and added project to test in github pages

--- a/resources/style.css
+++ b/resources/style.css
@@ -158,6 +158,7 @@ About me section
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    width: 100%;
 }
 
 .stackcontainer {
